<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">绿意苑</string>
    <string name="know">百科</string>
    <string name="care">代养</string>
    <string name="forum">论坛</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_type_1">Type_1Activity</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_goods">GoodsActivity</string>
    <string name="title_activity_forms">FormsActivity</string>
    <string name="title_activity_my_care">MyCareActivity</string>
    <string name="title_activity_my_focus">MyFocusActivity</string>
    <string name="title_activity_my_collect">MyCollectActivity</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="title_activity_forget_code">ForgetCodeActivity</string>
    <string name="title_activity_update_code">UpdateCodeActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_update_phone">UpdatePhoneActivity</string>
    <string name="title_activity_update_name">UpdateNameActivity</string>
    <string name="title_activity_psearch">PSearchActivity</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_care_share">CareShareActivity</string>
    <string name="title_activity_you_care_list">YouCareListActivity</string>
    <string name="title_activity_you_care_list2">YouCareList2Activity</string>
    <string name="title_activity_care_shop">CareShopActivity</string>
    <string name="title_activity_person_care">PersonCareActivity</string>
    <string name="title_activity_edit_pprovide">EditPProvideActivity</string>
    <string name="title_activity_care_type">CareTypeActivity</string>
    <string name="title_activity_my_submit">MySubmitActivity</string>
    <string name="title_activity_sm">SMActivity</string>
    <string name="title_activity_pmycare">PMycareActivity</string>
    <string name="title_activity_share_care">ShareCareActivity</string>
    <string name="title_activity_add_share">AddShareActivity</string>
    <string name="title_activity_care_assess">CareAssessActivity</string>
    <string name="title_activity_caring">CaringActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_pay_money">PayMoneyActivity</string>
    <string name="myShop">我的购物车</string>
    <string name="updateShopNum">修改商品数量</string>
    <string name="updateAddress">修改地址</string>
    <string name="numberSub">-</string>
    <string name="numberAdd">+</string>
    <string name="shopTotalPrice">商品总价(不含运费)</string>
    <string name="checkOut">结算</string>
    <string name="delete">删除</string>
    <string name="collection">收藏</string>
    <string name="sure">确定</string>
    <string name="sureOrder">确认订单</string>
    <string name="leaveMeassge">给卖家留言</string>
    <string name="title_activity_cart_pay">CartPayActivity</string>
    <string name="care_other1">去提交：提交自己的个人信息，和要代养的植物的类型。</string>
    <string name="care_other2">已提交：查看自己已提交的代养，当别人让你代养时，可以在这里输入被代养人的信息，改变提交的状态</string>
    <string name="care_other3">已代养：分享植物的状态给被代养人</string>
</resources>